--- a/style.css
+++ b/style.css
@@ -1,19 +1,62 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
     scroll-behavior: smooth;
     
 }
 
 body{
-    background-color: rgb(43, 0, 60);
-    color: rgb(252, 255, 159);
+    background-color: rgb(23, 23, 23);
+
+    color: rgb(253, 255, 197);
 }
 
 #menu12{
     display: none;
 }
+
+.intro{
+    width: 70%;
+    margin: auto;
+    padding: 20px;    
+}
+
+.grid{
+    width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(3, );
+    gap: 20px;
+}
+
+.item{
+    background-color: rgb(34, 34, 34);
+    border-radius: 20px;
+    padding: 20px;
+    text-align: justify;
+}
+
+.item_heading{
+    color:rgb(255, 195, 140) ;
+    font-size: 20px;
+    font-weight: bold;
+}
+.item_class{
+font-family: monospace;
+}
+
+
+.flowchart{
+display: flex;
+flex-direction: column;
+}
+
+#boxP{
+    width: 40%; 
+    margin: auto;
+} 
 
 
 @media (max-width:992px){
@@ -72,6 +115,54 @@ main{
     gap: 50px;
 }
 
+
+
+
+
+/* roadmap code */
+
+
+.intro{
+    width: 90%;
+    margin: auto;
+    padding: 20px; 
+    text-align: justify;   
+}
+
+.grid{
+    width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns:100%;
+    gap: 20px;
+}
+
+.item{
+    background-color: rgb(34, 34, 34);
+    border-radius: 20px;
+    padding: 20px;
+    text-align: justify;
+}
+
+.item_heading{
+    color:rgb(255, 195, 140) ;
+    font-size: 20px;
+    font-weight: bold;
+}
+.item_class{
+font-family: monospace;
+}
+
+
+.flowchart{
+display: flex;
+flex-direction: column;
+}
+
+#boxP{
+    width:90%; 
+    margin: auto;
+} 
 
 
 }
