--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Verdana, Tahoma, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     scroll-behavior: smooth;
     
 }
@@ -54,7 +54,8 @@ flex-direction: column;
 }
 
 #boxP{
-    width: 40%; 
+    text-align: left;
+    width: max-content; 
     margin: auto;
 } 
 
